# autonumba

./: LICENSE.txt  README.md  RESULTS.md  bnb.py  pyproject.toml
autonumba/: __main__.py  injector.py  installer.py  walker.py
example/: main.py  main_autonumba.py
